--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -39,13 +39,13 @@ header:
     show_language: false
     show_day_night: true
     show_search: true
-    highlight_active_link: false
+    highlight_active_link: true
 
 # Site footer
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Han Kun Ren. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
