--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,7 +21,7 @@ marketing:
     description: 'A highly-customizable Hugo academic resume theme powered by Hugo Blox Builder.'
     twitter: ''
   analytics:
-    google_analytics: ''
+    google_analytics: 'G-8PNNKHEMVP'
     baidu_tongji: ''
     google_tag_manager: ''
     microsoft_clarity: ''
